updates html and css

--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
         <img src="assets/gp1.webp" alt="gpimage1">
         <input type="text" id="inputField" placeholder="Type in here">
         <button id="addButton">Add to cart</button>
+        
     </div>
 
     <ul id="shoppingList">
-        <li>Oranges</li>
-        <li>Hot Dogs</li>
     </ul>
-
+    <span id="info">Click on item in the list to delete.</span>
     <script src="index.js" type="module"></script>
 </body>
 
