--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <body>
     <div class="container">
+        <span id="info">Piggies Shopping List</span>
         <img src="assets/gp1.webp" alt="gpimage1">
         <input type="text" id="inputField" placeholder="Type in here">
         <button id="addButton">Add to cart</button>
